--- a/ffcairo/ffcairo/config.h.in
+++ b/ffcairo/ffcairo/config.h.in
@@ -9,6 +9,8 @@ extern "C" {
 
 #include <libavcodec/avcodec.h>
 #include <libavformat/avformat.h>
+#include <libavutil/avstring.h>
+#include <libavutil/mathematics.h>
 
 #ifndef IS_LIBAV
 #include <ffmpeg/swscale.h>
