рефакторинг, экспериментальный класс FFCInput получил окончательное название FFCDemuxer

--- a/ffcairo/Makefile.in
+++ b/ffcairo/Makefile.in
@@ -59,7 +59,7 @@ OBJECTS+=obj/main.o
 
 LIBOBJECTS+=obj/ffcimage.o
 LIBOBJECTS+=obj/ffcmuxer.o
-LIBOBJECTS+=obj/ffcstream.o
+LIBOBJECTS+=obj/ffcdemuxer.o
 LIBOBJECTS+=obj/ffclibav.o
 
 ############################# GENERIC RULES ##################################
@@ -109,7 +109,7 @@ test5: test5-ffc.cpp libffcairo.a
 demo1-text: demo1-text.cpp libffcairo.a ffcairo/config.h
 	$(CXX) -o demo1-text demo1-text.cpp -L. -lffcairo $(LIBS)
 
-demo2-makevideo: demo2-makevideo.cpp libffcairo.a ffcairo/config.h ffcairo/ffcmuxer.h
+demo2-makevideo: demo2-makevideo.cpp libffcairo.a ffcairo/config.h
 	$(CXX) -o demo2-makevideo demo2-makevideo.cpp -L. -lffcairo $(LIBS)
 
 libffcairo.a: $(LIBOBJECTS) ffcairo/config.h
@@ -122,8 +122,8 @@ obj/ffcimage.o: ffcairo/ffcimage.cpp ffcairo/ffcimage.h ffcairo/config.h
 obj/ffcmuxer.o: ffcairo/ffcmuxer.cpp ffcairo/ffcmuxer.h ffcairo/config.h
 	$(CXX) -c ffcairo/ffcmuxer.cpp -o obj/ffcmuxer.o
 
-obj/ffcstream.o: ffcairo/ffcstream.cpp ffcairo/ffcstream.h ffcairo/config.h
-	$(CXX) -c ffcairo/ffcstream.cpp -o obj/ffcstream.o
+obj/ffcdemuxer.o: ffcairo/ffcdemuxer.cpp ffcairo/ffcdemuxer.h ffcairo/config.h
+	$(CXX) -c ffcairo/ffcdemuxer.cpp -o obj/ffcdemuxer.o
 
 obj/ffclibav.o: ffcairo/ffclibav.cpp ffcairo/ffclibav.h ffcairo/config.h
 	$(CXX) -c ffcairo/ffclibav.cpp -o obj/ffclibav.o
