--- a/ffcairo/Makefile.in
+++ b/ffcairo/Makefile.in
@@ -116,13 +116,15 @@ libffcairo.a: $(LIBOBJECTS) ffcairo/config.h
 	$(AR) rc libffcairo.a $(LIBOBJECTS)
 	$(RANLIB) libffcairo.a
 
-obj/ffcimage.o: ffcairo/ffcimage.cpp ffcairo/ffcimage.h ffcairo/config.h
+ffcairo/ffctypes.h: ffcairo/config.h
+
+obj/ffcimage.o: ffcairo/ffcimage.cpp ffcairo/ffcimage.h ffcairo/ffctypes.h
 	$(CXX) -c ffcairo/ffcimage.cpp -o obj/ffcimage.o
 
-obj/ffcmuxer.o: ffcairo/ffcmuxer.cpp ffcairo/ffcmuxer.h ffcairo/config.h
+obj/ffcmuxer.o: ffcairo/ffcmuxer.cpp ffcairo/ffcmuxer.h ffcairo/ffctypes.h
 	$(CXX) -c ffcairo/ffcmuxer.cpp -o obj/ffcmuxer.o
 
-obj/ffcdemuxer.o: ffcairo/ffcdemuxer.cpp ffcairo/ffcdemuxer.h ffcairo/config.h
+obj/ffcdemuxer.o: ffcairo/ffcdemuxer.cpp ffcairo/ffcdemuxer.h ffcairo/ffctypes.h
 	$(CXX) -c ffcairo/ffcdemuxer.cpp -o obj/ffcdemuxer.o
 
 obj/ffclibav.o: ffcairo/ffclibav.cpp ffcairo/ffclibav.h ffcairo/config.h
