--- a/ffcairo/configure.in
+++ b/ffcairo/configure.in
@@ -48,8 +48,31 @@ armv6l)
 	DEB_ARCH=$host_cpu
 esac
 
-# проверяем у нас битый libav или нормальный ffmpeg
-AC_CHECK_LIB(avcodec, av_packet_rescale_ts, [  ], [ AC_DEFINE(IS_LIBAV, 1) ], [ ])
+CPPFLAGS_ORIG=$CPPFLAGS
+LDFLAGS_ORIG=$LDFLAGS
+
+# я решил отказаться от поддержки библиотеки libav т.к. она очень сильно
+# уреза. В виду того, что оригинальной библиотеки ffmpeg в Ubunut trusty и
+# его производных дистрибудтивах нет, я решил сделать собственный пакет,
+# который устанавливается с фиксированным префиксом /opt/mt который не
+# конфликтует с libav. Соответственно сдесь проводиться поиск как
+# в системных каталогах, так и в каталоге /opt/mt
+CPPFLAGS=$CPPFLAGS_ORIG
+LDFLAGS=$LDFLAGS_ORIG
+AC_CHECK_LIB(avcodec, av_packet_rescale_ts, [ AC_DEFINE(HAVE_GOOD_FFMPEG, 1) ], [
+		CPPFLAGS="$CPPFLAGS_ORIG -I/opt/mt/include"
+		LDFLAGS="$LDFLAGS_ORIG -L/opt/mt/lib"
+		AC_CHECK_LIB(avformat, av_register_all, [
+				AC_DEFINE(HAVE_MT_FFMPEG, 1)
+				CPPFLAGS_EXTRA="$CPPFLAGS_EXTRA -I/opt/mt/include"
+				LDFLAGS_EXTRA="$LDFLAGS_EXTRA -L/opt/mt/lib"
+			], [
+				AC_MSG_ERROR([ffmpeg library not found])
+			], [ ])
+	], [ ])
+
+CPPFLAGS="$CPPFLAGS_ORIG $CPPFLAGS_EXTRA"
+LDFLAGS="$LDFLAGS_ORIG $LDFLAGS_EXTRA"
 
 # передаем переменную окружения DEB_ARCH в препроцессор мейк-файла
 AC_SUBST(DEB_ARCH)
