наброски фидера и протокола

--- a/ffcairo/Makefile.in
+++ b/ffcairo/Makefile.in
@@ -52,6 +52,7 @@ RANLIB:=ranlib
 ############################### VARS #########################################
 
 PROGS+=avc_server
+PROGS+=avc_feeder
 
 # Имя файла deb-пакета
 DEB_FILENAME=libffcairo-$(DEB_ARCH).deb
@@ -68,7 +69,9 @@ LIBOBJECTS+=obj/ffcmisc.o
 #
 LIBOBJECTS+=obj/avc_engine.o
 LIBOBJECTS+=obj/avc_listen.o
+LIBOBJECTS+=obj/avc_stream.o
 LIBOBJECTS+=obj/avc_channel.o
+LIBOBJECTS+=obj/avc_agent.o
 LIBOBJECTS+=obj/avc_http.o
 
 ############################# GENERIC RULES ##################################
@@ -115,6 +118,9 @@ deb_install:
 avc_server: avc_server.cpp libffcairo.a ffcairo/config.h
 	$(CXX) $(LDFLAGS) -o avc_server avc_server.cpp -L. -lffcairo $(LIBS) -ludns
 
+avc_feeder: avc_feeder.cpp libffcairo.a ffcairo/config.h
+	$(CXX) $(LDFLAGS) -o avc_feeder avc_feeder.cpp -L. -lffcairo $(LIBS) -ludns
+
 test5: test5-ffc.cpp libffcairo.a
 	$(CXX) $(LDFLAGS) -o test5 test5-ffc.cpp -L. -lffcairo $(LIBS)
 
@@ -154,8 +160,14 @@ obj/avc_engine.o: ffcairo/avc_engine.cpp ffcairo/avc_engine.h
 obj/avc_listen.o: ffcairo/avc_listen.cpp ffcairo/avc_listen.h ffcairo/avc_engine.h
 	$(CXX) -c ffcairo/avc_listen.cpp -o obj/avc_listen.o
 
-obj/avc_channel.o: ffcairo/avc_channel.cpp ffcairo/avc_channel.h ffcairo/avc_engine.h
+obj/avc_stream.o: ffcairo/avc_stream.cpp ffcairo/avc_stream.h
+	$(CXX) -c ffcairo/avc_stream.cpp -o obj/avc_stream.o
+
+obj/avc_channel.o: ffcairo/avc_channel.cpp ffcairo/avc_channel.h ffcairo/avc_stream.h ffcairo/avc_engine.h
 	$(CXX) -c ffcairo/avc_channel.cpp -o obj/avc_channel.o
+
+obj/avc_agent.o: ffcairo/avc_agent.cpp ffcairo/avc_agent.h
+	$(CXX) -c ffcairo/avc_agent.cpp -o obj/avc_agent.o
 
 obj/avc_http.o: ffcairo/avc_http.cpp ffcairo/avc_http.h ffcairo/avc_engine.h
 	$(CXX) -c ffcairo/avc_http.cpp -o obj/avc_http.o
@@ -168,7 +180,7 @@ distclean: clean deb_clean
 	rm -f config.log config.status
 	rm -f ffcairo/config.h
 	rm -rf autom4te.cache
-	rm -rf libffcairo.a avc_server test5
+	rm -rf libffcairo.a $(PROGS) test5
 	rm -rf demo1-text demo2-makevideo demo3-remux
 
 # простая очистка, промежуточные файлы, но оставляет целевые
