--- a/ffcairo/deb_avc_control.in
+++ b/ffcairo/deb_avc_control.in
@@ -1,9 +1,9 @@
-Package: libffcairo
+Package: avc-server
 Version: 0.1.1
 Section: misc
 Source: ffcairo
 Architecture: @DEB_ARCH@
 Maintainer: Alex V. Zolotov <zolotov-alex@shamangrad.net>
 Priority: extra
-Depends: libnano2
-Description: static library for video processing with ffmpeg and Cairo
+Depends: mt-ffmpeg
+Description: audio-video conference server and tools
